--- a/ai_multilayer_perceptron_fr.ipynb
+++ b/ai_multilayer_perceptron_fr.ipynb
@@ -44,15 +44,19 @@
     "$\\cur$: couche courante\n",
     "\n",
     "$\\newcommand{\\prev}{j}$\n",
-    "$\\prev$: couche immédiatement en amont (i.e. vers la couche d'entrée du réseau) de la courche courrante\n",
+    "$\\prev$: couche immédiatement en amont de la courche courrante (i.e. vers la couche d'entrée du réseau)\n",
     "\n",
     "$\\newcommand{\\next}{k}$\n",
-    "$\\next$: couche immédiatement en aval (i.e. vers la couche de sortie du réseau) de la courche courrante\n",
+    "$\\next$: couche immédiatement en aval de la courche courrante (i.e. vers la couche de sortie du réseau)\n",
+    "\n",
+    "$\\newcommand{\\ex}{\\eta}$\n",
+    "$\\ex$: exemple (*sample* ou *feature*) courant (i.e. le vecteur des entrées courantes du réseau)\n",
     "\n",
     "$\\newcommand{\\pot}{x}$\n",
-    "$\\pot_i$: *Potentiel d'activation* du neurone $i$\n",
+    "$\\pot_i$: *Potentiel d'activation* du neurone $i$ pour l'exemple $\\ex$\n",
     "\n",
-    "$\\newcommand{\\wij}{w_{ij}}$\n",
+    "$\\newcommand{\\weight}{w}$\n",
+    "$\\newcommand{\\wij}{w_{ij}}$ **TODO**\n",
     "$\\wij$: Poids de la connexion entre le neurone $j$ et le neurone $i$\n",
     "\n",
     "$\\newcommand{\\activthres}{\\theta}$\n",
@@ -68,31 +72,22 @@
     "$\\learnrate$: *Pas d'apprentissage* ou *Taux d'apprentissage*\n",
     "\n",
     "$\\newcommand{\\learnit}{n}$\n",
-    "$\\learnit$: numéro d'itération (ou cycle ou époque) du processus d'apprentissage\n",
+    "$\\learnit$: Numéro d'itération (ou cycle ou époque) du processus d'apprentissage\n",
     "\n",
     "$\\newcommand{\\sigout}{y}$\n",
-    "$\\sigout$: **TODO**\n",
-    "\n",
-    "$\\newcommand{\\sigoutcur}{y_i}$\n",
-    "$\\sigoutcur$: **TODO**\n",
-    "\n",
-    "$\\newcommand{\\sigoutprev}{y_j}$\n",
-    "$\\sigoutprev$: **TODO**\n",
+    "$\\newcommand{\\sigoutcur}{y_i}$ **TODO**\n",
+    "$\\newcommand{\\sigoutprev}{y_j}$ **TODO**\n",
+    "$\\sigout_i$: Signal de sortie du neurone $i$ pour l'exemple $\\ex$\n",
     "\n",
     "$\\newcommand{\\sigoutdes}{d}$\n",
-    "$\\sigoutdes$: **TODO**\n",
-    "\n",
-    "$\\newcommand{\\sigoutdescur}{d_i}$\n",
-    "$\\sigoutdescur$: **TODO**\n",
+    "$\\newcommand{\\sigoutdescur}{d_i}$ **TODO**\n",
+    "$\\sigoutdes_i$: Sortie désirée (*étiquette*) du neurone $i$ pour l'exemple $\\ex$\n",
     "\n",
     "$\\newcommand{\\weights}{\\boldsymbol{W}}$\n",
-    "$\\weights$: **TODO**\n",
-    "\n",
-    "$\\newcommand{\\weight}{w}$\n",
-    "$\\weight$: **TODO**\n",
+    "$\\weights$: Matrice des poids du réseau (en réalité il y a une matrice de taille potentiellement différente par couche)\n",
     "\n",
     "$\\newcommand{\\errsig}{\\Delta}$\n",
-    "$\\errsig_i$: *Signal d'erreur* du neurone $i$"
+    "$\\errsig_i$: *Signal d'erreur* du neurone $i$ pour l'exemple $\\ex$"
    ]
   },
   {
