--- a/signal_processing_wavelet_transform_fr.ipynb
+++ b/signal_processing_wavelet_transform_fr.ipynb
@@ -250,9 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "file_path = \"/Users/jdecock/git/pub/jdhp/snippets/science/wavelet_transform/test.fits\"\n",
@@ -281,6 +279,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
@@ -296,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
