--- a/signal_processing_fourier_transform_fr.ipynb
+++ b/signal_processing_fourier_transform_fr.ipynb
@@ -3,14 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%pylab inline\n",
+    "%matplotlib inline\n",
     "\n",
-    "pylab.rcParams['figure.figsize'] = (6, 6)\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['figure.figsize'] = (6, 6)\n",
     "\n",
     "import math\n",
     "import cmath          # math functions for complex numbers\n",
@@ -90,9 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "@interact(a=(-5., 5.), b=(-5., 5.))\n",
@@ -225,8 +222,6 @@
    },
    "outputs": [],
    "source": [
-    "import argparse\n",
-    "\n",
     "import math\n",
     "\n",
     "import numpy as np\n",
@@ -239,39 +234,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# %load /Users/jdecock/git/pub/jdhp/snippets/python/numpy/fft_transform/fft2.py\n",
+    "# %load %load https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/numpy/fft_transform/fft2.py\n",
     "\n",
     "# Fast Fourier Transform snippet\n",
     "#\n",
-    "# Example usages:\n",
-    "#   ./fft2.py -t 0.0001 -s ./test.jpeg\n",
-    "#   ./fft2.py -t 0.001 ./test.jpeg\n",
-    "#   ipython3 -- ./fft2.py -t 0.0001 -s ./test.jpeg\n",
-    "#\n",
-    "# This snippet requires Numpy, Scipy, Matplotlib and PIL/Pillow Python libraries.\n",
-    "# \n",
     "# Additional documentation:\n",
     "# - Numpy implementation: http://docs.scipy.org/doc/numpy/reference/routines.fft.html\n",
     "# - Scipy implementation: http://docs.scipy.org/doc/scipy/reference/fftpack.html\n",
     "\n",
-    "# PARSE OPTIONS ######################################################\n",
+    "# SET OPTIONS ########################################################\n",
     "\n",
-    "parser = argparse.ArgumentParser(description='An FFT snippet.')\n",
-    "\n",
-    "parser.add_argument(\"--shift\", \"-s\", help=\"Shift the zero to the center\", action=\"store_true\", default=False)\n",
-    "parser.add_argument(\"--threshold\", \"-t\",  help=\"The threshold value (between 0 and 1)\", type=float, default=0, metavar=\"FLOAT\")\n",
-    "parser.add_argument(\"fileargs\", nargs=1, metavar=\"FILE\", help=\"The file image to filter\")\n",
-    "args = parser.parse_args()\n",
-    "\n",
-    "shift = args.shift\n",
-    "threshold = args.threshold\n",
-    "file_path = args.fileargs[0]\n",
-    "\n",
+    "shift = True                                      # Shift the zero to the center\n",
+    "threshold = 0.0001                                # The threshold value (between 0 and 1)\n",
+    "file_path = \"./sample-images/julie_lebrun.jpeg\"   # The file image to filter\n",
     "\n",
     "# GET DATA ###########################################################\n",
     "\n",
@@ -320,30 +298,16 @@
     "filtered_signal = np.fft.ifft2(filtered_transformed_signal)\n",
     "\n",
     "ax4.imshow(abs(filtered_signal), interpolation='nearest', cmap=cm.gray)\n",
-    "ax4.set_title(\"Filtered image\")\n",
-    "\n",
-    "\n",
-    "# SAVE FILES ######################\n",
-    "\n",
-    "#plt.savefig(\"fft2.png\")\n",
-    "#plt.savefig(\"fft2.svg\")\n",
-    "plt.savefig(\"fft2.pdf\")\n",
-    "\n",
-    "\n",
-    "# PLOT ############################\n",
-    "\n",
-    "plt.show()"
+    "ax4.set_title(\"Filtered image\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# %load /Users/jdecock/git/pub/jdhp/snippets/python/numpy/fft_transform/fft2_basic_test.py\n",
+    "# %load %load https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/numpy/fft_transform/fft2_basic_test.py\n",
     "\n",
     "# Fast Fourier Transform snippets\n",
     "# \n",
@@ -392,58 +356,29 @@
     "filtered_signal = np.fft.ifft2(filtered_transformed_signal)\n",
     "\n",
     "ax4.imshow(abs(filtered_signal), interpolation='nearest', cmap=cm.gray)\n",
-    "ax4.set_title(\"Filtered image\")\n",
-    "\n",
-    "\n",
-    "# SAVE FILES ######################\n",
-    "\n",
-    "#plt.savefig(\"fft2_basic_test.png\")\n",
-    "#plt.savefig(\"fft2_basic_test.svg\")\n",
-    "plt.savefig(\"fft2_basic_test.pdf\")\n",
-    "\n",
-    "\n",
-    "# PLOT ############################\n",
-    "\n",
-    "plt.show()"
+    "ax4.set_title(\"Filtered image\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# %load /Users/jdecock/git/pub/jdhp/snippets/python/numpy/fft_transform/fft2_with_noise.py\n",
+    "# %load %load https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/numpy/fft_transform/fft2_with_noise.py\n",
     "\n",
     "# Fast Fourier Transform snippet\n",
-    "#\n",
-    "# Example usages:\n",
-    "#   ./fft2_with_noise.py -t 0.0001 -s ./test.jpeg\n",
-    "#   ./fft2_with_noise.py -t 0.001 ./test.jpeg\n",
-    "#   ipython3 -- ./fft2_with_noise.py -t 0.0001 -s ./test.jpeg\n",
-    "#\n",
-    "# This snippet requires Numpy, Scipy, Matplotlib and PIL/Pillow Python libraries.\n",
     "# \n",
     "# Additional documentation:\n",
     "# - Numpy implementation: http://docs.scipy.org/doc/numpy/reference/routines.fft.html\n",
     "# - Scipy implementation: http://docs.scipy.org/doc/scipy/reference/fftpack.html\n",
     "\n",
-    "# PARSE OPTIONS ######################################################\n",
+    "# SET OPTIONS ########################################################\n",
     "\n",
-    "parser = argparse.ArgumentParser(description='An FFT snippet.')\n",
-    "\n",
-    "parser.add_argument(\"--shift\", \"-s\", help=\"Shift the zero to the center\", action=\"store_true\", default=False)\n",
-    "parser.add_argument(\"--threshold\", \"-t\",  help=\"The threshold value (between 0 and 1)\", type=float, default=0, metavar=\"FLOAT\")\n",
-    "parser.add_argument(\"--noise\", \"-n\",  help=\"The noise coefficient (between 0 and 1)\", type=float, default=0, metavar=\"FLOAT\")\n",
-    "parser.add_argument(\"fileargs\", nargs=1, metavar=\"FILE\", help=\"The file image to filter\")\n",
-    "args = parser.parse_args()\n",
-    "\n",
-    "shift = args.shift\n",
-    "noise_coefficient = args.noise\n",
-    "threshold = args.threshold\n",
-    "file_path = args.fileargs[0]\n",
+    "shift = True                                      # Shift the zero to the center\n",
+    "threshold = 0.0001                                # The threshold value (between 0 and 1)\n",
+    "noise_coefficient = 0.5                           # The noise coefficient (between 0 and 1)\n",
+    "file_path = \"./sample-images/julie_lebrun.jpeg\"   # The file image to filter\n",
     "\n",
     "# GET DATA ###########################################################\n",
     "\n",
@@ -561,53 +496,29 @@
     "\n",
     "ax10.set_axis_off()\n",
     "ax11.set_axis_off()\n",
-    "ax12.set_axis_off()\n",
-    "\n",
-    "#plt.savefig(\"fft2_with_noise.png\")\n",
-    "#plt.savefig(\"fft2_with_noise.svg\")\n",
-    "plt.savefig(\"fft2_with_noise.pdf\", bbox_inches='tight')\n",
-    "\n",
-    "\n",
-    "# PLOT ############################\n",
-    "\n",
-    "plt.show()"
+    "ax12.set_axis_off()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# %load /Users/jdecock/git/pub/jdhp/snippets/python/numpy/fft_transform/fft_with_noise.py\n",
+    "# %load %load https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/numpy/fft_transform/fft_with_noise.py\n",
     "\n",
     "# Fast Fourier Transform snippet\n",
-    "#\n",
-    "# Example usages:\n",
-    "#   ./fft_with_noise.py -t 0.0001 -s ./test.jpeg\n",
-    "#   ./fft_with_noise.py -t 0.001 ./test.jpeg\n",
-    "#   ipython3 -- ./fft_with_noise.py -t 0.0001 -s ./test.jpeg\n",
-    "#\n",
-    "# This snippet requires Numpy, Scipy, Matplotlib and PIL/Pillow Python libraries.\n",
     "# \n",
     "# Additional documentation:\n",
     "# - Numpy implementation: http://docs.scipy.org/doc/numpy/reference/routines.fft.html\n",
     "# - Scipy implementation: http://docs.scipy.org/doc/scipy/reference/fftpack.html\n",
     "\n",
-    "# PARSE OPTIONS ######################################################\n",
+    "# SET OPTIONS ########################################################\n",
     "\n",
-    "parser = argparse.ArgumentParser(description='An FFT snippet.')\n",
-    "\n",
-    "parser.add_argument(\"--shift\", \"-s\", help=\"Shift the zero to the center\", action=\"store_true\", default=False)\n",
-    "parser.add_argument(\"--threshold\", \"-t\",  help=\"The threshold value (between 0 and 1)\", type=float, default=0, metavar=\"FLOAT\")\n",
-    "parser.add_argument(\"--noise\", \"-n\",  help=\"The noise coefficient (between 0 and 1)\", type=float, default=0, metavar=\"FLOAT\")\n",
-    "args = parser.parse_args()\n",
-    "\n",
-    "shift = args.shift\n",
-    "noise_coefficient = args.noise\n",
-    "threshold = args.threshold\n",
+    "shift = True                                      # Shift the zero to the center\n",
+    "threshold = 0.0001                                # The threshold value (between 0 and 1)\n",
+    "noise_coefficient = 0.5                           # The noise coefficient (between 0 and 1)\n",
+    "file_path = \"./sample-images/julie_lebrun.jpeg\"   # The file image to filter\n",
     "\n",
     "# GET DATA ###########################################################\n",
     "\n",
@@ -703,7 +614,6 @@
     "ax12.plot(t, abs(filtered_noised_sig))\n",
     "ax12.set_title(\"Filtered noised signal\")\n",
     "\n",
-    "\n",
     "# SAVE FILES ######################\n",
     "\n",
     "#ax1.set_axis_off()\n",
@@ -719,61 +629,29 @@
     "\n",
     "#ax10.set_axis_off()\n",
     "#ax11.set_axis_off()\n",
-    "#ax12.set_axis_off()\n",
-    "\n",
-    "#plt.savefig(\"fft_with_noise.png\")\n",
-    "#plt.savefig(\"fft_with_noise.svg\")\n",
-    "plt.savefig(\"fft_with_noise.pdf\")\n",
-    "\n",
-    "\n",
-    "# PLOT ############################\n",
-    "\n",
-    "plt.show()"
+    "#ax12.set_axis_off()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# %load /Users/jdecock/git/pub/jdhp/snippets/python/numpy/fft_transform/plot.py\n",
+    "# %load %load https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/numpy/fft_transform/plot.py\n",
     "\n",
     "# Fast Fourier Transform snippet\n",
-    "#\n",
-    "# Example usages:\n",
-    "#   ./fft_with_noise.py -t 0.0001 -s ./lenna.png\n",
-    "#   ./fft_with_noise.py -t 0.001 ./lenna.png\n",
-    "#   ipython3 -- ./fft_with_noise.py -t 0.0001 -s ./lenna.png\n",
-    "#\n",
-    "# This snippet requires Numpy, Scipy, Matplotlib and PIL/Pillow Python libraries.\n",
     "# \n",
     "# Additional documentation:\n",
     "# - Numpy implementation: http://docs.scipy.org/doc/numpy/reference/routines.fft.html\n",
     "# - Scipy implementation: http://docs.scipy.org/doc/scipy/reference/fftpack.html\n",
     "\n",
-    "import argparse\n",
+    "# SET OPTIONS ########################################################\n",
     "\n",
-    "import math\n",
-    "\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib import cm\n",
-    "\n",
-    "# PARSE OPTIONS ######################################################\n",
-    "\n",
-    "parser = argparse.ArgumentParser(description='An FFT snippet.')\n",
-    "\n",
-    "parser.add_argument(\"--shift\", \"-s\", help=\"Shift the zero to the center\", action=\"store_true\", default=False)\n",
-    "parser.add_argument(\"--threshold\", \"-t\",  help=\"The threshold value (between 0 and 1)\", type=float, default=0, metavar=\"FLOAT\")\n",
-    "parser.add_argument(\"--noise\", \"-n\",  help=\"The noise coefficient (between 0 and 1)\", type=float, default=0, metavar=\"FLOAT\")\n",
-    "args = parser.parse_args()\n",
-    "\n",
-    "shift = args.shift\n",
-    "noise_coefficient = args.noise\n",
-    "threshold = args.threshold\n",
+    "shift = True                                      # Shift the zero to the center\n",
+    "threshold = 0.0001                                # The threshold value (between 0 and 1)\n",
+    "noise_coefficient = 0.5                           # The noise coefficient (between 0 and 1)\n",
+    "file_path = \"./sample-images/julie_lebrun.jpeg\"   # The file image to filter\n",
     "\n",
     "# GET DATA ###########################################################\n",
     "\n",
@@ -827,135 +705,28 @@
     "ax2.bar([1, 2, 3], [1, 2, 4], 0.01)\n",
     "ax2.set_title(r\"Fourier space\")\n",
     "ax2.set_xlim([0, 4])\n",
-    "ax2.set_ylim([0, 5])\n",
-    "\n",
-    "\n",
-    "## FOURIER TRANSFORM WITH NUMPY #######################################\n",
-    "#\n",
-    "## Do the fourier transform #############\n",
-    "#\n",
-    "#fourier_sig = np.fft.fft(sig)\n",
-    "#fourier_noise = np.fft.fft(noise)\n",
-    "#fourier_noised_sig = np.fft.fft(noised_sig)\n",
-    "#\n",
-    "#if shift:\n",
-    "#    fourier_sig = np.fft.fftshift(fourier_sig)\n",
-    "#    fourier_noise = np.fft.fftshift(fourier_noise)\n",
-    "#    fourier_noised_sig = np.fft.fftshift(fourier_noised_sig)\n",
-    "#\n",
-    "#ax4.plot(t, abs(fourier_sig))\n",
-    "#ax4.set_title(\"Fourier coefficients\\nbefore filtering (signal)\")\n",
-    "#\n",
-    "#ax5.plot(t, abs(fourier_noise))\n",
-    "#ax5.set_title(\"Fourier coefficients\\nbefore filtering (noise)\")\n",
-    "#\n",
-    "#ax6.plot(t, abs(fourier_noised_sig))\n",
-    "#ax6.set_title(\"Fourier coefficients\\nbefore filtering (noised signal)\")\n",
-    "#\n",
-    "#\n",
-    "## Filter ###############################\n",
-    "#\n",
-    "#max_value = np.max(abs(fourier_sig))\n",
-    "#\n",
-    "## TODO: lets the user choose between a threshold based on max, mean, median, ... or a geometric mask (square or circle to the center)\n",
-    "#filtered_fourier_sig = fourier_sig * (abs(fourier_sig) > max_value*threshold)\n",
-    "#filtered_fourier_noise = fourier_noise * (abs(fourier_noise) > max_value*threshold)\n",
-    "#filtered_fourier_noised_sig = fourier_noised_sig * (abs(fourier_noised_sig) > max_value*threshold)\n",
-    "#\n",
-    "#ax7.plot(t, abs(filtered_fourier_sig))\n",
-    "#ax7.set_title(\"Fourier coefficients\\nafter filtering (signal)\")\n",
-    "#\n",
-    "#ax8.plot(t, abs(filtered_fourier_noise))\n",
-    "#ax8.set_title(\"Fourier coefficients\\nafter filtering (noise)\")\n",
-    "#\n",
-    "#ax9.plot(t, abs(filtered_fourier_noised_sig))\n",
-    "#ax9.set_title(\"Fourier coefficients\\nafter filtering (noised signal)\")\n",
-    "#\n",
-    "#\n",
-    "## Do the reverse transform #############\n",
-    "#\n",
-    "#if shift:\n",
-    "#    filtered_fourier_sig = np.fft.ifftshift(filtered_fourier_sig)\n",
-    "#    filtered_fourier_noise = np.fft.ifftshift(filtered_fourier_noise)\n",
-    "#    filtered_fourier_noised_sig = np.fft.ifftshift(filtered_fourier_noised_sig)\n",
-    "#\n",
-    "#filtered_sig = np.fft.ifft(filtered_fourier_sig)\n",
-    "#filtered_noise = np.fft.ifft(filtered_fourier_noise)\n",
-    "#filtered_noised_sig = np.fft.ifft(filtered_fourier_noised_sig)\n",
-    "#\n",
-    "#ax10.plot(t, abs(filtered_sig))\n",
-    "#ax10.set_title(\"Filtered signal\")\n",
-    "#\n",
-    "#ax11.plot(t, abs(filtered_noise))\n",
-    "#ax11.set_title(\"Filtered noise\")\n",
-    "#\n",
-    "#ax12.plot(t, abs(filtered_noised_sig))\n",
-    "#ax12.set_title(\"Filtered noised signal\")\n",
-    "\n",
-    "\n",
-    "# SAVE FILES ######################\n",
-    "\n",
-    "#ax1.set_axis_off()\n",
-    "#ax2.set_axis_off()\n",
-    "#ax3.set_axis_off()\n",
-    "#ax4.set_axis_off()\n",
-    "#ax5.set_axis_off()\n",
-    "#ax6.set_axis_off()\n",
-    "\n",
-    "#ax7.set_axis_off()\n",
-    "#ax8.set_axis_off()\n",
-    "#ax9.set_axis_off()\n",
-    "\n",
-    "#ax10.set_axis_off()\n",
-    "#ax11.set_axis_off()\n",
-    "#ax12.set_axis_off()\n",
-    "\n",
-    "#plt.savefig(\"fft_with_noise.png\")\n",
-    "#plt.savefig(\"fft_with_noise.svg\")\n",
-    "plt.savefig(\"ft.pdf\")\n",
-    "\n",
-    "\n",
-    "# PLOT ############################\n",
-    "\n",
-    "plt.show()"
+    "ax2.set_ylim([0, 5])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# %load /Users/jdecock/git/pub/jdhp/snippets/python/numpy/fft_transform/rfft2.py\n",
+    "# %load %load https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/numpy/fft_transform/rfft2.py\n",
     "\n",
     "# Fast Fourier Transform snippet\n",
-    "#\n",
-    "# Example usages:\n",
-    "#   ./rfft2.py -t 0.0001 ./test.jpeg\n",
-    "#   ./rfft2.py -t 0.001 ./test.jpeg\n",
-    "#   ipython3 -- ./rfft2.py -t 0.0001 ./test.jpeg\n",
-    "#\n",
-    "# This snippet requires Numpy, Scipy, Matplotlib and PIL/Pillow Python libraries.\n",
     "# \n",
     "# Additional documentation:\n",
     "# - Numpy implementation: http://docs.scipy.org/doc/numpy/reference/routines.fft.html\n",
     "# - Scipy implementation: http://docs.scipy.org/doc/scipy/reference/fftpack.html\n",
     "\n",
-    "# PARSE OPTIONS ######################################################\n",
+    "# SET OPTIONS ########################################################\n",
     "\n",
-    "parser = argparse.ArgumentParser(description='An FFT snippet.')\n",
-    "\n",
-    "parser.add_argument(\"--shift\", \"-s\", help=\"Shift the zero to the center\", action=\"store_true\", default=False)\n",
-    "parser.add_argument(\"--threshold\", \"-t\",  help=\"The threshold value (between 0 and 1)\", type=float, default=0, metavar=\"FLOAT\")\n",
-    "parser.add_argument(\"fileargs\", nargs=1, metavar=\"FILE\", help=\"The file image to filter\")\n",
-    "args = parser.parse_args()\n",
-    "\n",
-    "shift = args.shift\n",
-    "threshold = args.threshold\n",
-    "file_path = args.fileargs[0]\n",
-    "\n",
+    "shift = True                                      # Shift the zero to the center\n",
+    "threshold = 0.0001                                # The threshold value (between 0 and 1)\n",
+    "file_path = \"./sample-images/julie_lebrun.jpeg\"   # The file image to filter\n",
     "\n",
     "# GET DATA ###########################################################\n",
     "\n",
@@ -1004,20 +775,17 @@
     "filtered_signal = np.fft.irfft2(filtered_transformed_signal)\n",
     "\n",
     "ax4.imshow(abs(filtered_signal), interpolation='nearest', cmap=cm.gray)\n",
-    "ax4.set_title(\"Filtered image\")\n",
-    "\n",
-    "\n",
-    "# SAVE FILES ######################\n",
-    "\n",
-    "#plt.savefig(\"rfft2.png\")\n",
-    "#plt.savefig(\"rfft2.svg\")\n",
-    "plt.savefig(\"rfft2.pdf\")\n",
-    "\n",
-    "\n",
-    "# PLOT ############################\n",
-    "\n",
-    "plt.show()"
+    "ax4.set_title(\"Filtered image\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1037,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
