Fix the ASCII encoding issue with the clean script.

--- a/opendata_fr.ipynb
+++ b/opendata_fr.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cette page r\u00e9pertorie une liste de liens vers des bases de donn\u00e9es ouvertes."
+    "Cette page répertorie une liste de liens vers des bases de données ouvertes."
    ]
   },
   {
@@ -43,29 +43,29 @@
     "- Le portail *open data* du gouvernement: https://www.data.gouv.fr/\n",
     "- https://index.okfn.org/place/fr/\n",
     "- http://global.census.okfn.org/place/fr\n",
-    "- Base de donn\u00e9es r\u00e9gionales et d\u00e9partementales sur l'environnement, l'\u00e9nergie, le transport, le logement et la construction:\n",
+    "- Base de données régionales et départementales sur l'environnement, l'énergie, le transport, le logement et la construction:\n",
     "    - http://www.stats.environnement.developpement-durable.gouv.fr/Eider/series.do\n",
     "    - http://social-sante.gouv.fr/sante-et-environnement/eaux/article/qualite-de-l-eau-potable\n",
     "\n",
-    "### Qualit\u00e9 de l'air\n",
+    "### Qualité de l'air\n",
     "\n",
     "- http://www.stats.environnement.developpement-durable.go\n",
     "\n",
-    "### Qualit\u00e9 de l'eau\n",
+    "### Qualité de l'eau\n",
     "\n",
-    "- Bases r\u00e9gionales et d\u00e9partementales: http://www.stats.environnement.developpement-durable.go\n",
-    "- Qualit\u00e9 de l'eau potable par ville: http://social-sante.gouv.fr/sante-et-environnement/eaux\n",
+    "- Bases régionales et départementales: http://www.stats.environnement.developpement-durable.go\n",
+    "- Qualité de l'eau potable par ville: http://social-sante.gouv.fr/sante-et-environnement/eaux\n",
     "\n",
-    "### M\u00e9t\u00e9o\n",
+    "### Météo\n",
     "\n",
     "- ARPEGE Atmospheric global forecast model up to 102H: https://donneespubliques.meteofrance.fr/?fond=produit&id_produit=130&id_rubrique=51\n",
     "- AROME forecast model containing all required characteristics: https://donneespubliques.meteofrance.fr/?fond=produit&id_produit=131&id_rubrique=51\n",
     "\n",
-    "### G\u00e9olocalisation des adresses postales\n",
+    "### Géolocalisation des adresses postales\n",
     "\n",
     "- La base nationale des adresses (sources: IGN et La Poste): https://adresse.data.gouv.fr/\n",
     "\n",
-    "### Enseignement sup\u00e9rieur et recherche\n",
+    "### Enseignement supérieur et recherche\n",
     "\n",
     "- https://data.enseignementsup-recherche.gouv.fr/explore/?sort=modified\n",
     "\n",
